Fix a padding issue that flitches the menu on small screens

--- a/placeholder/style.css
+++ b/placeholder/style.css
@@ -144,7 +144,7 @@ code {
 	font-size: 120%;
 	color: inherit;
 	text-decoration: none;
-	padding: 0.9rem 1.5rem;
+	padding: 0.9rem 0;
 	border-radius: 0 0 1rem 1rem;
 }
 
